[gd_scene load_steps=7 format=3 uid="uid://d2hl0wtm1t4ix"]

[ext_resource type="Script" path="res://ver_1/vfx/beat_visualizer.gd" id="1_rc47k"]
[ext_resource type="Texture2D" uid="uid://sxavbsunw0tr" path="res://assets/UI/upgrade.png" id="3_kxs4u"]
[ext_resource type="Texture2D" uid="uid://b48bg22uuhx8x" path="res://beat_sync/WhiteCircle.png" id="3_pdjbo"]

[sub_resource type="Curve" id="Curve_4epxo"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.512579, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ig6rq"]
curve = SubResource("Curve_4epxo")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ptbyu"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 230.0
emission_ring_inner_radius = 220.0
spread = 180.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
radial_accel_min = -2.23517e-06
radial_accel_max = -2.23517e-06
scale_max = 10.3
color = Color(0, 1, 1, 1)
alpha_curve = SubResource("CurveTexture_ig6rq")

[node name="BeatVisualizer" type="Control" node_paths=PackedStringArray("note_path")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rc47k")
time_to_finish = 1.5
note_path = NodePath("Rings")
max_size = 0.6
min_size = 0.1
starting_color = Color(0, 1, 1, 0.0901961)
ending_color = Color(0, 1, 1, 0.262745)
particle_color = Color(0, 1, 0.92549, 1)
transparent_ring_color = Color(1, 1, 1, 0.752941)
beating_color = Color(0, 1, 1, 1)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 400
process_material = SubResource("ParticleProcessMaterial_ptbyu")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.785398
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(256, 256)
texture = ExtResource("3_kxs4u")

[node name="Rings" type="Control" parent="."]
anchors_preset = 0

[node name="TransparentRing" type="TextureRect" parent="."]
self_modulate = Color(0, 1, 1, 0.192157)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(490, 490)
texture = ExtResource("3_pdjbo")

[node name="EffectTimer" type="Timer" parent="."]

[connection signal="timeout" from="EffectTimer" to="." method="_on_effect_timer_timeout"]
